fix: PR resolved on modal and scrollbar dataTables

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -982,3 +982,7 @@ td>span.doc-name {
     padding-top: 1px;
   }
 }
+
+#RAFilter.modal{
+  --bs-modal-width: 670px;
+}
