--- a/src/scss/filejet-scss/entities/_entities.scss
+++ b/src/scss/filejet-scss/entities/_entities.scss
@@ -144,6 +144,3 @@
        border-bottom: 2px solid lightgrey;
     }
 }
-#RAFilter.modal{
-    --bs-modal-width: 670px;
-}
